# OpenWorldExperiment

./: .env.example  .gitignore  LICENSE  README.md  RESEARCH_ALIGNMENT.md  game.js  index.html  llm_server.py  ml_example.py  pyproject.toml  requirements.txt  styles.css
ml/: __init__.py  behavior_analysis.py  curriculum_learning.py  evaluation_system.py  llm_bridge.py  multi_agent_coordination.py  neural_networks.py  population_training.py  rl_core.py  task_generation.py  training_orchestrator.py
