[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-ended-learning-framework"
version = "0.1.0"
description = "An open-ended learning environment inspired by DeepMind's XLand research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Open-Ended Learning Framework Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "openai>=1.0.0",
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "jupyter>=1.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/open-ended-learning-framework"
Repository = "https://github.com/yourusername/open-ended-learning-framework"
Issues = "https://github.com/yourusername/open-ended-learning-framework/issues"

[project.scripts]
oelf-train = "ml_example:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
